--- a/src/admin/css/accordion.css
+++ b/src/admin/css/accordion.css
@@ -1,12 +1,31 @@
-.pointer {
-    cursor: pointer;
+.accordion-list .wp-list-table td:last-child {
+    width: 60px;
 }
 
-.form-table h2 strong {
+.accordion-edit h1 {
+    display: none;
+}
+
+.accordion-edit .form-table {
+    background-color: rgba(127, 127, 127, 0.1);
+    border: 1px solid silver;
+    border-collapse: inherit;
+    border-radius: 6px;
+    padding: 0 12px;
+}
+
+.accordion-edit .form-table h2 > strong {
     margin-right: 20px;
 }
 
-span.button {
+.accordion-edit [data-button="add"] {
+    margin-top: 10px !important;
+}
+
+.accordion-edit [data-button="add"],
+.accordion-edit [data-button="delete"],
+.accordion-edit [data-button="up"],
+.accordion-edit [data-button="down"] {
     font-size: 20px !important;
     width: 50px;
 }
