--- a/src/public/css/accordion.css
+++ b/src/public/css/accordion.css
@@ -4,14 +4,18 @@
 .accordion > h5,
 .accordion > h6,
 .accordion > strong {
-    background-color: #000000;
+    background: #0E0E0E;
+    background: -moz-linear-gradient(top, #7D7E7D 0%, #0E0E0E 100%);
+    background: -webkit-linear-gradient(top, #7D7E7D 0%, #0E0E0E 100%);
+    background: linear-gradient(to bottom, #7D7E7D 0%, #0E0E0E 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#7D7E7D', endColorstr='#0E0E0E', GradientType=0);
     border-radius: 3px;
     color: #FFFFFF;
     cursor: pointer;
     display: block;
     margin: 4px 0 0 0 !important;
     max-width: 100%;
-    padding: 4px 8px;
+    padding: 4px 8px !important;
 }
 
 .accordion .arrow-icons {
